Changed Example.ipynb to include A.gif inline.

--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -719,7 +719,7 @@
    "id": "c9eaadae-7abc-481b-8d38-ca73d931d4d9",
    "metadata": {},
    "source": [
-    "[MDavocado diagram of AdK example trajectory](./A.gif)"
+    "![MDavocado diagram of AdK example trajectory](./A.gif)"
    ]
   }
  ],
