Added more examples to Jupyter notebook.

--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -179,7 +179,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "b993df5b-05be-4b8c-bd31-423734d5aecd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -720,6 +722,22 @@
    "metadata": {},
    "source": [
     "![MDavocado diagram of AdK example trajectory](./A.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a89837a-4396-4565-860f-1d3cf5661292",
+   "metadata": {},
+   "source": [
+    "This is a rather short trajectory with just 4187 frames and therefore there are not much points to aggregate, although the dynamics of several moving amino acids is still very visible. But in case of much longer trajectories (as in the case of trajectory having 400 000 frames and lasting 1 microsecond from [ALOKOMP project](https://alokomp.irb.hr/) page) you would get something like this:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc2ce3c6-4340-440d-97fb-a9ac204e5917",
+   "metadata": {},
+   "source": [
+    "![](https://alokomp.irb.hr/static/avokado/1458/A.gif)"
    ]
   }
  ],
